[workspace]
resolver = "2"
members = ["sdk", "services/*"]

[workspace.package]
version = "0.0.2-alpha"
edition = "2021"
rust-version = "1.73"
authors = ["Jarod Liu <liuyuanzhi@gmail.com>"]
repository = "https://github.com/jarod/zenlayercloud-sdk-rs"
license-file = "LICENSE"
categories = ["api-bindings"]
description = "Async Zenlayer Cloud openapi wrapper"

[workspace.dependencies]
serde = "1.0"
chrono = "0.4"
log = "0.4"
tokio = "1"
anyhow = "1.0"
# services/*
# zenlayercloud-sdk = { path = "sdk" }
zenlayercloud-sdk = "0.0.2-alpha"
